k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
  labels:
    app: ecommerce
spec:
  type: NodePort
  selector:
    app: ecommerce
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
